# VAQ

./: CMakeLists.txt  ExperimentsParameters.txt  README.md
bitvecengine/: BitVecEngine.cpp  BitVecEngine.hpp  BitVector.hpp  CMakeLists.txt  KMeans.hpp  VAQ.cpp  VAQ.hpp
bitvecengine/utils/: AVXUtils.hpp  DistanceFunctions.hpp  Experiment.hpp  Heap.cpp  Heap.hpp  IO.hpp  Math.hpp  Random.hpp  TimingUtils.hpp  Types.hpp
bitvecengine/utils/FPGrowth/: fptree.cpp  fptree.hpp
examples/: CMakeLists.txt  demo_binary.cpp  demo_bitvecengine.cpp  demo_boltcentroids.cpp  demo_cluster.cpp  demo_vaq.cpp  demo_vaq_paramsearch.cpp
scripts/: compute_accuracy.py  make.sh  run_demos.sh
test/: CMakeLists.txt  test-bitvecengine.cpp  test-bitvector.cpp  test-distancefunction.cpp
